# eltclsh

./: .gitignore  CHANGELOG  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.mk.in  configure  configure.ac  configure.in  eltclsh.1  eltclsh.pc.in  mkIndex  robots.m4
compat/: strlcat.c  strlcpy.c
m4/: robots.m4  tcl.m4
src/: Makefile.am  Makefile.in  complete.c  el.c  eltclsh.c  eltclsh.h  elwish.c  init.c  loop.c  parse.c  parse.h  signal.c  version.h
tcl/: Makefile.in  complete.tcl  init.tcl  packages.tcl  tools.tcl
